--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Create prerelease
         uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: ${{ github.token }}
           automatic_release_tag: latest
           prerelease: true
           draft: false
