--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -64,7 +64,7 @@ jobs:
           gh release delete latest --cleanup-tag
 
       - name: Create prerelease
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
         with:
           prerelease: true
           tag_name: latest
